# Detecto

./: .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
src/detecto/: __init__.py  pipeline.py
src/detecto/models/detectors/: autoencoder.py  block_maxima.py  dbscan.py  factory.py  interface.py  isoforest.py  mad.py  one_class_svm.py  pot.py  zscore.py
src/detecto/models/notifications/: email.py  factory.py  interface.py  slack.py
src/detecto/models/timeframes/: interface.py  pot.py
src/detecto/standalone/: pot.py  pot_detecto.py
src/detecto/utils/: _types.py
tests/: conftest.py
tests/unit_tests/: test_src_version.py
tests/unit_tests/detectors/: test_detecto.py  test_factory_detecto.py  test_pot_detecto.py
tests/unit_tests/notifications/: test_email_notification.py  test_factory_notification.py  test_notification.py  test_slack_notification.py
tests/unit_tests/standalone/: test_pot_detecto.py
tests/unit_tests/timeframes/: test_pot_timeframe.py  test_timeframe.py
